Atualiza o arquivo de configuração para permitir subdiretórios de idioma e ajusta links de navegação e sitemap para refletir as mudanças de URL. Corrige links de edição em posts e páginas de contato, livros e tags.

--- a/public/pt-br/books/index.html
+++ b/public/pt-br/books/index.html
@@ -74,7 +74,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://localhost:1313/pt-br/" accesskey="h" title="FariaBlog (Alt + H)">FariaBlog</a>
+            <a href="http://localhost:1313/" accesskey="h" title="FariaBlog (Alt + H)">FariaBlog</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)" aria-label="Toggle theme">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -149,7 +149,7 @@
     <li>
         <a href="http://localhost:1313/books/">🇺🇸 En</a>
     </li>
-</ul>&nbsp;|&nbsp;<a href="https://github.com/FariaDev/fariablog/content/books.md" rel="noopener noreferrer edit" target="_blank">Sugira Edições</a>
+</ul>&nbsp;|&nbsp;<a href="https://github.com/FariaDev/fariablog/edit/main/content//books.md" rel="noopener noreferrer edit" target="_blank">Sugira Edições</a>
 
 </div>
   </header> 
