--- a/public/pt-br/true/index.html
+++ b/public/pt-br/true/index.html
@@ -5,11 +5,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="noindex, nofollow">
-<title>Tags | FariaBlog</title>
+<title>True | FariaBlog</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="http://localhost:1313/pt-br/tags/">
+<link rel="canonical" href="http://localhost:1313/pt-br/true/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.fd5505046bf487bdf6edb1e07bc8c998d3323a70062dce67a6742f8583b58f28.css" integrity="sha256-/VUFBGv0h7327bHge8jJmNMyOnAGLc5npnQvhYO1jyg=" rel="preload stylesheet" as="style">
 <link rel="icon" href="http://localhost:1313/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
@@ -18,9 +18,9 @@
 <link rel="mask-icon" href="http://localhost:1313/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" type="application/rss+xml" href="http://localhost:1313/pt-br/tags/index.xml">
-<link rel="alternate" hreflang="pt-br" href="http://localhost:1313/pt-br/tags/">
-<link rel="alternate" hreflang="en" href="http://localhost:1313/tags/">
+<link rel="alternate" type="application/rss+xml" href="http://localhost:1313/pt-br/true/index.xml">
+<link rel="alternate" hreflang="pt-br" href="http://localhost:1313/pt-br/true/">
+<link rel="alternate" hreflang="en" href="http://localhost:1313/true/">
 <noscript>
     <style>
         #theme-toggle,
@@ -113,7 +113,7 @@
             </li>
             <li>
                 <a href="http://localhost:1313/pt-br/tags/" title="Tags">
-                    <span class="active">Tags</span>
+                    <span>Tags</span>
                 </a>
             </li>
             <li>
@@ -136,25 +136,10 @@
 </header>
 <main class="main">
 <header class="page-header">
-    <h1>Tags</h1>
+    <h1>True</h1>
 </header>
 
 <ul class="terms-tags">
-    <li>
-        <a href="http://localhost:1313/pt-br/tags/economia/">Economia <sup><strong><sup>1</sup></strong></sup> </a>
-    </li>
-    <li>
-        <a href="http://localhost:1313/pt-br/tags/educa%C3%A7%C3%A3o/">Educação <sup><strong><sup>1</sup></strong></sup> </a>
-    </li>
-    <li>
-        <a href="http://localhost:1313/pt-br/tags/filosofia/">Filosofia <sup><strong><sup>3</sup></strong></sup> </a>
-    </li>
-    <li>
-        <a href="http://localhost:1313/pt-br/tags/leitura/">Leitura <sup><strong><sup>4</sup></strong></sup> </a>
-    </li>
-    <li>
-        <a href="http://localhost:1313/pt-br/tags/neuroci%C3%AAncia/">Neurociência <sup><strong><sup>2</sup></strong></sup> </a>
-    </li>
 </ul>
     </main>
     
