--- a/public/true/index.html
+++ b/public/true/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="pt-br" dir="auto">
+<html lang="en" dir="auto">
 
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="noindex, nofollow">
-<title>Tags | FariaBlog</title>
+<title>True | FariaBlog</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="http://localhost:1313/pt-br/tags/">
+<link rel="canonical" href="http://localhost:1313/true/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.fd5505046bf487bdf6edb1e07bc8c998d3323a70062dce67a6742f8583b58f28.css" integrity="sha256-/VUFBGv0h7327bHge8jJmNMyOnAGLc5npnQvhYO1jyg=" rel="preload stylesheet" as="style">
 <link rel="icon" href="http://localhost:1313/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
@@ -18,9 +18,9 @@
 <link rel="mask-icon" href="http://localhost:1313/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" type="application/rss+xml" href="http://localhost:1313/pt-br/tags/index.xml">
-<link rel="alternate" hreflang="pt-br" href="http://localhost:1313/pt-br/tags/">
-<link rel="alternate" hreflang="en" href="http://localhost:1313/tags/">
+<link rel="alternate" type="application/rss+xml" href="http://localhost:1313/true/index.xml">
+<link rel="alternate" hreflang="pt-br" href="http://localhost:1313/pt-br/true/">
+<link rel="alternate" hreflang="en" href="http://localhost:1313/true/">
 <noscript>
     <style>
         #theme-toggle,
@@ -99,36 +99,36 @@
                 </button>
                 <ul class="lang-switch"><li>|</li>
                     <li>
-                        <a href="http://localhost:1313/" title="🇺🇸 En"
-                            aria-label="🇺🇸 En">🇺🇸 En</a>
+                        <a href="http://localhost:1313/pt-br/" title="🇧🇷 Pt-Br"
+                            aria-label="🇧🇷 Pt-Br">🇧🇷 Pt-Br</a>
                     </li>
                 </ul>
             </div>
         </div>
         <ul id="menu">
             <li>
-                <a href="http://localhost:1313/pt-br/search/" title="Search (Alt &#43; /)" accesskey=/>
+                <a href="http://localhost:1313/search/" title="Search (Alt &#43; /)" accesskey=/>
                     <span>Search</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/pt-br/tags/" title="Tags">
-                    <span class="active">Tags</span>
+                <a href="http://localhost:1313/tags/" title="Tags">
+                    <span>Tags</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/pt-br/archives/" title="Archive">
+                <a href="http://localhost:1313/archives/" title="Archive">
                     <span>Archive</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/pt-br/contact/" title="Contato">
-                    <span>Contato</span>
+                <a href="http://localhost:1313/contact/" title="Contact">
+                    <span>Contact</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/pt-br/books/" title="Livros Lidos">
-                    <span>Livros Lidos</span>
+                <a href="http://localhost:1313/books/" title="Books Read">
+                    <span>Books Read</span>
                 </a>
             </li>
         </ul>
@@ -136,30 +136,15 @@
 </header>
 <main class="main">
 <header class="page-header">
-    <h1>Tags</h1>
+    <h1>True</h1>
 </header>
 
 <ul class="terms-tags">
-    <li>
-        <a href="http://localhost:1313/pt-br/tags/economia/">Economia <sup><strong><sup>1</sup></strong></sup> </a>
-    </li>
-    <li>
-        <a href="http://localhost:1313/pt-br/tags/educa%C3%A7%C3%A3o/">Educação <sup><strong><sup>1</sup></strong></sup> </a>
-    </li>
-    <li>
-        <a href="http://localhost:1313/pt-br/tags/filosofia/">Filosofia <sup><strong><sup>3</sup></strong></sup> </a>
-    </li>
-    <li>
-        <a href="http://localhost:1313/pt-br/tags/leitura/">Leitura <sup><strong><sup>4</sup></strong></sup> </a>
-    </li>
-    <li>
-        <a href="http://localhost:1313/pt-br/tags/neuroci%C3%AAncia/">Neurociência <sup><strong><sup>2</sup></strong></sup> </a>
-    </li>
 </ul>
     </main>
     
 <footer class="footer">
-        <span>&copy; 2025 <a href="http://localhost:1313/pt-br/">FariaBlog</a></span> · 
+        <span>&copy; 2025 <a href="http://localhost:1313/">FariaBlog</a></span> · 
 
     <span>
         Powered by
